--- a/FrontEnd/DevPaths/src/variables.scss
+++ b/FrontEnd/DevPaths/src/variables.scss
@@ -1,2 +1,7 @@
 @import "src/style/colors.scss";
 @import "src/style/fonts.scss";
+
+/**************************************
+        Bootstrap Icon
+**************************************/
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css");
