--- a/FrontEnd/DevPaths/src/style/fonts.scss
+++ b/FrontEnd/DevPaths/src/style/fonts.scss
@@ -1,6 +1,14 @@
 @import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@400;700;900&family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap");
 
-
+/***************************************
+            Website Fonts
+***************************************/
 $font-regular: normal 400 18px/14px "IBM Plex Mono", monospace;
 $font-small-title: normal 600 22px/20px "IBM Plex Mono", monospace;
 $font-title: normal 700 30px/18px "IBM Plex Mono", monospace;
+
+/***************************************
+            Branding Fonts
+***************************************/
+$font-brand: normal 700 30px/18px "Cinzel Decorative", cursive;
